--- a/LDVELH/src/main/res/layout/activity_adventure_cc.xml
+++ b/LDVELH/src/main/res/layout/activity_adventure_cc.xml
@@ -26,17 +26,18 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@drawable/pencil_border_small"
+            android:gravity="center"
             android:orientation="vertical">
 
             <com.home.ldvelh.ui.widget.CCAttribute
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 custom:attributeName="@string/cc_strength"
                 custom:propertyName="STRENGTH"
                 custom:withPicker="false" />
 
             <com.home.ldvelh.ui.widget.CCAttribute
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 custom:attributeName="@string/cc_protection"
                 custom:propertyName="PROTECTION"
@@ -48,16 +49,17 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@drawable/pencil_border_small"
+            android:gravity="center"
             android:orientation="vertical">
 
             <com.home.ldvelh.ui.widget.CCAttribute
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 custom:attributeName="@string/cc_honor"
                 custom:propertyName="HONOR" />
 
             <com.home.ldvelh.ui.widget.CCAttribute
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 custom:attributeName="@string/cc_shame"
                 custom:propertyName="SHAME" />
@@ -68,16 +70,17 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@drawable/pencil_border_small"
+            android:gravity="center"
             android:orientation="vertical">
 
             <com.home.ldvelh.ui.widget.CCAttribute
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 custom:attributeName="@string/cc_endurance"
                 custom:propertyName="ENDURANCE" />
 
             <com.home.ldvelh.ui.widget.CCAttribute
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 custom:attributeName="@string/cc_intelligence"
                 custom:propertyName="INTELLIGENCE" />
