--- a/LDVELH/src/main/res/layout/dialog_name_value_pair_editor.xml
+++ b/LDVELH/src/main/res/layout/dialog_name_value_pair_editor.xml
@@ -34,7 +34,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/firstValueName"
+                android:id="@+id/value1Name"
                 style="@style/ldvelhListItems"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -42,7 +42,7 @@
                 android:padding="@dimen/default_padding" />
 
             <com.home.ldvelh.ui.widget.CustomNumberPicker
-                android:id="@+id/numberPickerFirstValue"
+                android:id="@+id/numberPickerValue1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:clipChildren="false"
@@ -56,7 +56,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/secondValueName"
+                android:id="@+id/value2Name"
                 style="@style/ldvelhListItems"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -64,7 +64,7 @@
                 android:padding="@dimen/default_padding" />
 
             <com.home.ldvelh.ui.widget.CustomNumberPicker
-                android:id="@+id/numberPickerSecondValue"
+                android:id="@+id/numberPickerValue2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:clipChildren="false"
