--- a/LDVELH/src/main/res/layout/list_item_cc_equipment.xml
+++ b/LDVELH/src/main/res/layout/list_item_cc_equipment.xml
@@ -14,14 +14,14 @@
         android:layout_weight="3" />
 
     <TextView
-        android:id="@+id/strength"
+        android:id="@+id/strengthAttribute"
         style="@style/ldvelhListItems"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1" />
 
     <TextView
-        android:id="@+id/protection"
+        android:id="@+id/protectionAttribute"
         style="@style/ldvelhListItems"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
