--- a/LDVELH/src/main/res/layout/dialog_name_value_pair_editor.xml
+++ b/LDVELH/src/main/res/layout/dialog_name_value_pair_editor.xml
@@ -13,7 +13,7 @@
         android:orientation="horizontal">
 
         <EditText
-            android:id="@+id/itemName"
+            android:id="@+id/name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textCapSentences|textAutoCorrect"
