--- a/LDVELH/src/main/res/values/dimens.xml
+++ b/LDVELH/src/main/res/values/dimens.xml
@@ -10,5 +10,6 @@
     <dimen name="small_margin">2dp</dimen>
     <dimen name="small_padding">2dp</dimen>
     <dimen name="small_button_text">10sp</dimen>
+    <dimen name="min_dialog_width">200dp</dimen>
 
 </resources>
