--- a/LDVELH/src/main/res/layout/fragment_page_df08_magic_stones.xml
+++ b/LDVELH/src/main/res/layout/fragment_page_df08_magic_stones.xml
@@ -5,7 +5,7 @@
     android:background="@drawable/pencil_border"
     android:orientation="vertical" >
 
-    <com.home.ldvelh.ui.widget.list.ItemList
+    <com.home.ldvelh.ui.widget.list.SimpleItemList
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         custom:listPropertyName="STONE_LIST"
