--- a/LDVELH/src/main/res/layout/list_item_cc_god.xml
+++ b/LDVELH/src/main/res/layout/list_item_cc_god.xml
@@ -13,46 +13,26 @@
         android:layout_weight="1" />
 
     <RadioGroup
+        android:id="@+id/buttonGroup"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="3"
-        android:orientation="horizontal" >
+        android:orientation="horizontal">
 
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center" >
+        <RadioButton
+            android:id="@+id/favorable"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
-            <RadioButton
-                android:id="@+id/favorable"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
+        <RadioButton
+            android:id="@+id/neutral"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center" >
-
-            <RadioButton
-                android:id="@+id/neutral"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center" >
-
-            <RadioButton
-                android:id="@+id/unfavorable"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
+        <RadioButton
+            android:id="@+id/unfavorable"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
     </RadioGroup>
 
 </LinearLayout>
