--- a/LDVELH/src/main/res/layout/fragment_page_df04_items.xml
+++ b/LDVELH/src/main/res/layout/fragment_page_df04_items.xml
@@ -5,7 +5,7 @@
     android:background="@drawable/pencil_border"
     android:orientation="vertical" >
 
-    <com.home.ldvelh.ui.widget.list.SimpleItemList
+    <com.home.ldvelh.ui.widget.list.EffectItemListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         custom:listPropertyName="ITEM_LIST"
