--- a/LDVELH/src/main/res/layout/list_item_cc_equipment.xml
+++ b/LDVELH/src/main/res/layout/list_item_cc_equipment.xml
@@ -19,14 +19,16 @@
         style="@style/ldvelhListItems"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:gravity="center" />
 
     <TextView
         android:id="@+id/protectionAttribute"
         style="@style/ldvelhListItems"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:gravity="center" />
 
     <LinearLayout
         android:layout_width="0dp"
