--- a/LDVELH/src/main/res/layout/widget_utility_dice.xml
+++ b/LDVELH/src/main/res/layout/widget_utility_dice.xml
@@ -1,7 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal" >
+    android:layout_height="wrap_content">
 
     <Button
         android:id="@+id/diceButton"
@@ -17,7 +16,7 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:contentDescription="@string/lorem_ipsum"
-        android:elevation="30dp" 
+        android:elevation="30dp"
         android:scaleX="1.3"
         android:scaleY="1.3"
         android:src="@drawable/die6" />
