--- a/LDVELH/src/main/res/layout/list_item_cc_combat_fighter.xml
+++ b/LDVELH/src/main/res/layout/list_item_cc_combat_fighter.xml
@@ -13,7 +13,7 @@
         android:id="@+id/testButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="test" />
+        android:text="@string/test" />
 
     <TextView
         android:id="@+id/fighterName"
